fixed button error and disabled them during a win or loss. Added the hangman image too

--- a/index.html
+++ b/index.html
@@ -24,31 +24,22 @@
                 <h4>Losses</h4>
                 <h5 id="totalLosses"></h5>
                 <h4>Current Character</h4>
-                <h3 id="currentCharacter"></h3>
+                <h4 id="currentCharacter"></h4>
                 <h4>Strikes Remaining</h4>
                 <h6 id="remainingStrikes"></h6>
+                <button id="reset">Play again</button>
             </div>
-            <div class="col-md-6 gameplay-column">
-                <!-- <img id="youwin-image" src="assets/images/you-win.png" alt="Winning Image" />
-                <img id="gameover-image" src="assets/images/gameover.png" alt="Game Over Image" /> -->
-                <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
-                <img id="hangmanImage" src="" alt="" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 gameplay-alphabet">
+            <div class="col-md-6 gameplay-alphabet">
                 <h4>Alphabet</h4>
-                 <div id="buttons"></div>  
+                 <div id="buttons"></div> 
+                 <canvas id="hangman"></canvas> 
             </div>
         </div>
     </div>
-
- <!--============= Javascripts Links for the Game ===============================--> 
-    <script>play()</script>
+<!--================ End of Main Content Container =========================--> 
+<!--============= Javascripts Links for the Game ===============================--> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"crossorigin="anonymous"></script>
-   
-<!--================ End of Main Content Container =========================-->  
 </body>
 </html>
