added the comments to the overall game and cleaned up some areas

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <!--==== Bootstrap Stylesheet link =====-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<!--==== Stylesheets =====-->
+<!--==== My Game Stylesheet =====-->
     <link rel="stylesheet" href="assets/css/style.css">
-<!--==== Scripts =========-->
+<!--==== My Game Script =========-->
     <script src="assets/javascript/game.js" type="text/javascript"></script> 
 </head>
 <body>
